package net.larsan.protobuf.typeframe;

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    optional int32 type_id = 50001;
}

message EchoRequest {

  option (type_id) = 1;

  required string msg = 1;
  
}

message EchoResponse {

  option (type_id) = 2;

  required string msg = 1;
  
}
